ocp/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kekcb-recontool-portal-users-v1
spec:
  selector:
    app: kekcb-recontool-portal-users-v1
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
