ocp/dsr-kekcb-recontool-portal-users-v1.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dsr-kekcb-recontool-portal-users-v1
  namespace: kekcb-recontool-portal
spec:
  host: kekcb-recontool-portal-users-v1.kekcb-recontool-portal.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 50
      http:
        http1MaxPendingRequests: 10
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
